--- a/Parcial3/CRUD/src/views/view-client.html
+++ b/Parcial3/CRUD/src/views/view-client.html
@@ -7,51 +7,53 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="/public/css/bootstrap.min.css">
+    <style>
+        @media print {
+            .container {
+                width: 100%;
+            }
+
+            .btn, h1, nav {
+                display: none;
+            }
+        }
+    </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/clients">Ver clientes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/create_client">Crear cliente</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container pt-3">
         <h1 class="fs-2 pb-3">Ver usuario</h1>
+        <ul class="list-group">
+            <li class="list-group-item"><b>Apellido paterno:</b> <span id="appaterno"></span></li>
+            <li class="list-group-item"><b>Apellido materno:</b> <span id="apmaterno"></span></li>
+            <li class="list-group-item"><b>Nombre:</b> <span id="nombre"></span></li>
+            <li class="list-group-item"><b>Fecha de nacimiento:</b> <span id="fechanac"></span></li>
+            <li class="list-group-item"><b>Edad:</b> <span id="edad"></span></li>
+            <li class="list-group-item"><b>Genero:</b> <span id="genero"></span></li>
+            <li class="list-group-item"><b>Domicilio:</b> <span id="domicilio"></span></li>
+            <li class="list-group-item"><b>Telefono:</b> <span id="telefono"></span></li>
+            <li class="list-group-item"><b>Correo electronico:</b> <span id="email"></span></li>
+        </ul>
         <form action="">
-            <div class="row gy-3">
-                <div class="col-md-6">
-                    <label>Apellido paterno</label>
-                    <input type="text" name="appaterno" id="appaterno" class="form-control w-100">
-                </div>
-                <div class="col-md-6">
-                    <label>Apellido materno</label>
-                    <input type="text" name="apmaterno" id="apmaterno" class="form-control w-100">
-                </div>
-                <div class="col-md-6">
-                    <label>Nombre</label>
-                    <input type="text" name="nombre" id="nombre" class="form-control w-100">
-                </div>
-                <div class="col-md-6">
-                    <label>Fecha de nacimiento</label>
-                    <input type="date" name="fechanac" id="fechanac" class="form-control w-100">
-                </div>
-                <div class="col-md-6">
-                    <label>Edad</label>
-                    <input type="number" name="edad" id="edad" class="form-control w-100">
-                </div>
-                <div class="col-md-6">
-                    <label>Genero</label>
-                    <select name="genero" id="genero" class="form-select w-100">
-                        <option value="M">Hombre</option>
-                        <option value="F">Mujer</option>
-                    </select>
-                </div>
-                <div class="col-md-6">
-                    <label>Domicilio</label>
-                    <input type="text" name="domicilio" id="domicilio" class="form-control w-100">
-                </div>
-                <div class="col-md-6">
-                    <label>Telefono</label>
-                    <input type="tel" name="telefono" id="telefono" class="form-control w-100">
-                </div>
-                <div class="col-md-6">
-                    <label>Correo electronico</label>
-                    <input type="text" name="email" id="email" class="form-control w-100">
-                </div>
+            <div class="row gy-3 mt-3">
                 <div class="col-md-12">
                     <a class="btn btn-primary" href="#" id="btnEditar">Editar</a>
                     <a class="btn btn-primary" href="/clients">Ver todos los clientes</a>
@@ -66,10 +68,12 @@
         const url = new URLSearchParams(location.href.split('?')[1]);
         const response = await fetch(`http://127.0.0.1:3000/getClient?id=${url.get('id')}`);
         const data = await response.json();
+        data.fechanac = data.fechanac.split('T')[0];
+        data.genero = data.genero === 'M' ? 'Hombre' : 'Mujer';
         Object.entries(data).forEach(([key, value]) => {
             const elem = document.getElementById(key);
             if (elem) {
-                elem.value = value;
+                elem.textContent = value;
             }
         });
         document.getElementById('btnEditar').href = `/edit_client?id=${data.clave}`;
