--- a/Parcial3/CRUD/src/views/view-clients.html
+++ b/Parcial3/CRUD/src/views/view-clients.html
@@ -11,65 +11,195 @@
     <script defer src="/public/fontawesome/js/solid.js"></script>
     <script defer src="/public/fontawesome/js/fontawesome.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css">
+    <style>
+        html, body {
+            margin: 0 !important;
+            padding: 0 !important;
+        }
+
+        @media print {
+            .container {
+                width: 100% !important;
+            }
+
+            .btn, h1, nav {
+                display: none;
+            }
+
+            #wrapper table {
+                page-break-inside: auto;
+            }
+
+            #wrapper tr {
+                page-break-inside: avoid;
+                page-break-after: auto;
+                /*height: 30px;*/
+            }
+
+            #wrapper thead {
+                display: table-header-group;
+            }
+
+            #wrapper tfoot {
+                display: table-footer-group;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div class="container pt-5">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/clients">Ver clientes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/create_client">Crear cliente</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container pt-3">
+        <h1 class="fs-3">Ver clientes</h1>
+        <a class="btn btn-danger float-end mb-1" href="/clients/pdf" target="_blank">Exportar a pdf <i
+                class="fa-solid fa-file-pdf"></i></a>
         <div id="wrapper"></div>
     </div>
-    <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script>
-        const grid = new gridjs.Grid({
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="module">
+        import {
+            Grid,
+            html
+        } from "https://unpkg.com/gridjs?module";
+
+        const url = new URLSearchParams(location.href.split('?')[1]);
+        const isPrinting = url.has('printing');
+
+        const onClickRow = async (e, row) => {
+            e.preventDefault();
+            if (e.target.tagName !== 'A') return;
+            if (!e.target.href.endsWith('#')) {
+                window.open(e.target.href, '_blank');
+                return;
+            }
+            if (e.target.dataset.action === 'borrar') {
+                const result = await Swal.fire({
+                    title: "¿Está seguro de borrar este cliente?",
+                    icon: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#3085d6",
+                    cancelButtonColor: "#d33",
+                    confirmButtonText: "Si"
+                });
+                if (result.isConfirmed) {
+                    await fetch(`/clients/${row.cells[0].data}`, {method: 'DELETE'});
+                    const Toast = Swal.mixin({
+                        toast: true,
+                        position: "top-end",
+                        showConfirmButton: false,
+                    });
+                    Toast.fire({
+                        icon: "success",
+                        title: "Borrado!"
+                    });
+                    grid.forceRender();
+                }
+            } else if (e.target.dataset.action === 'actualizar-contacto') {
+                const {value: formValues} = await Swal.fire({
+                    title: 'Modificar información de contacto',
+                    html:
+                        `<form>
+                            <div class="row gy-3 mx-0">
+                                <div class="col-md-12">
+                                    <label class="text-start pb-1">Teléfono</label>
+                                    <input type="tel" name="telefono" id="telefono" class="form-control w-100">
+                                </div>
+                                <div class="col-md-12">
+                                    <label class="text-start pb-1">Correo electrónico</label>
+                                    <input type="text" name="email" id="email" class="form-control w-100">
+                                </div>
+                            </div>
+                        </form>`,
+                    focusConfirm: false,
+                    willOpen: () => {
+                        document.getElementById('telefono').value = row.cells[5].data;
+                        document.getElementById('email').value = row.cells[6].data;
+                    },
+                    preConfirm: () => {
+                        return [
+                            document.getElementById('telefono').value,
+                            document.getElementById('email').value
+                        ]
+                    }
+                });
+                if (formValues) {
+                    await axios.patch(`/clients/${row.cells[0].data}`, {
+                        telefono: formValues[0],
+                        email: formValues[1]
+                    });
+                    const Toast = Swal.mixin({
+                        toast: true,
+                        position: "top-end",
+                        showConfirmButton: false,
+                    });
+                    Toast.fire({
+                        icon: "success",
+                        title: "Actualizado!"
+                    });
+                    grid.forceRender();
+                }
+            }
+        }
+
+        const grid = new Grid({
+            className: {
+                td: 'print-nobreak'
+            },
             columns: [
-                {name: 'id', visible: true},
+                {name: 'id', hidden: true},
                 {name: 'Nombre'},
-                {name: 'Fecha de nacimiento'},
+                {
+                    attributes: {
+                        class: 'text-nowrap gridjs-td gridjs-th'
+                    },
+                    name: 'Fecha de nacimiento', formatter: (cell) => new Intl.DateTimeFormat('es-MX', {
+                        dateStyle: 'medium',
+                        timeStyle: 'medium',
+                        hour12: true,
+                    }).format(new Date(cell))
+                },
                 {name: 'Edad'},
-                {name: 'Genero'},
+                {name: 'Genero', formatter: (cell) => cell === 'M' ? 'Hombre' : 'Mujer'},
+                {name: 'Telefono'},
                 {name: 'Correo'},
                 {
-                    name: 'Options', attributes: (_, row) => {
-                        console.log(row);
+                    name: 'Opciones', hidden: isPrinting, attributes: (_, row) => {
                         return {
-                            onClick: async (e) => {
-                                e.preventDefault();
-                                if (e.target.dataset.action === 'borrar') {
-                                    const result = await Swal.fire({
-                                        title: "¿Está seguro de borrar este cliente?",
-                                        icon: "warning",
-                                        showCancelButton: true,
-                                        confirmButtonColor: "#3085d6",
-                                        cancelButtonColor: "#d33",
-                                        confirmButtonText: "Si"
-                                    });
-                                    if (result.isConfirmed) {
-                                        await fetch(`/clients/${row.cells[0].data}`, {method: 'DELETE'});
-                                        const Toast = Swal.mixin({
-                                            toast: true,
-                                            position: "top-end",
-                                            showConfirmButton: false,
-                                        });
-                                        Toast.fire({
-                                            icon: "success",
-                                            title: "Borrado!"
-                                        });
-                                        grid.forceRender();
-                                    }
-                                } else {
-
-                                }
-                            }
+                            onClick: (e) => onClickRow(e, row)
                         };
                     }, formatter: (_, row) => {
-
-                        return gridjs.html(`<div class="dropdown">
+                        return html(`<div class="dropdown">
   <div data-bs-toggle="dropdown"><i class="fa-solid fa-ellipsis-v" ></i></div>
   <ul class="dropdown-menu">
     <li><a class="dropdown-item" href="/client?id=${row.cells[0].data}" target="_blank">Ver</a></li>
-    <li><a class="dropdown-item" href="/clients/${row.cells[0].data}/pdf" data-action="borrar">Borrar</a></li>
+    <li class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="/edit_client?id=${row.cells[0].data}" target="_blank">Editar</a></li>
+    <li class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#" data-action="borrar">Borrar</a></li>
+    <li class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#" data-action="actualizar-contacto">Modificar información de contacto</a></li>
+    <li class="dropdown-divider"></li>
     <li><a class="dropdown-item" href="/clients/${row.cells[0].data}/pdf">Imprimir en PDF</a></li>
   </ul>
 </div>`);
@@ -78,16 +208,14 @@
             ],
             server: {
                 url: 'http://127.0.0.1:3000/getClients',
-                then: data => data.map(x => [x.clave, x.nombre, x.fechanac, x.edad, x.genero, x.email]
-                )
+                then: data => data.map(x => [x.clave, x.nombre, x.fechanac, x.edad, x.genero, x.telefono, x.email])
             },
-            height: '80vh',
-            pagination: {
-                // limit: 2,
+            // height: '80vh',
+            pagination: isPrinting ? undefined : {
+                limit: 10,
                 summary: false
             }
         }).render(document.getElementById('wrapper'));
-
     </script>
 </body>
 </html>
